[tool.poetry]
name = "sql-vs-nosql"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "sql_vs_nosql"}]

[tool.poetry.dependencies]
python = "3.11.5"
tinydb = "^4.8.0"
ruff = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
